# Healthcare-management-system

./: CMakeLists.txt  IL_rec.cpp  SI.cpp  SI_rec.h
Headers/: AppointmentDatafile.tpp  AvailList.tpp  DoctorDataFile.tpp
include/: AppointmentIndexService.h  DoctorIndexService.h  DoctorSecondryIndexService.h  IL.h  IL_rec.h  PrimaryIndexService.h  SI.h  SI_rec.h  SecondryIndexService.h  appointment.h  appointmentFileService.h  appointmentSecondryIndexService.h  dataFileType.h  doctor.h  doctorFileService.h  doctorIndexService.h  fileService.h  offsetService.cpp  offsetService.h  primaryIndex.h  queryParser.h  secondaryIndex.h  secondaryIndexService.h  uiservice.h
output/: doctorprimaryindex.txt  doctors.txt
src/: AppointmentIndexService.cpp  DoctorDateFile.cpp  DoctorIndexService.cpp  DoctorSecondryIndexService.cpp  IL.cpp  IL_rec.cpp  PrimaryIndexService.cpp  SI.cpp  SI_IL.cpp  SI_rec.cpp  appointment.cpp  appointmentFileService.cpp  appointmentSecondryIndexService.cpp  doctor.cpp  doctorFileService.cpp  doctorIndexService.cpp  fileService.cpp  invertedList.cpp  main.cpp  offsetService.cpp  queryParser.cpp  secondaryIndex.cpp  secondaryIndexService.cpp  uiservice.cpp
